# DynamicWebF25

./: README.md
Final/recipe/: package-lock.json
Final/recipe/src/: App.js
Final/services/: .coveragerc  recipes.db
Final/services/tests/: test_recipe_unit.py  test_scrape_unit.py
Final/services/youtube_parser/: __init__.py  main.py  pyproject.toml  recipe_gen.py  type.py  youtube_results_20250510_180120.json  yt_scrape.py
Final/services/youtube_parser/prompts/: recipe_extraction.txt  recipe_system.txt
Midterm/recipe/: package.json
Midterm/recipe/src/: App.js
Midterm/services/: requirements.txt
Midterm/services/youtube_parser/: main.py  types.py  yt_scrape.py
Week02/recipe_card/: package-lock.json
Week02/recipe_card/src/: App.js  global.css
Week02/week02a/recipe_card/: package.json
Week04/4a/: package-lock.json  package.json
Week04/4b/: package-lock.json  package.json
Week05/5b/: package-lock.json  package.json
Week05/5b/src/: api.js
Week06/6a/: package-lock.json
Week08/V1/: README.md
Week08/V2/: README.md  api.http  db.json
Week09/V2/: README.md  db.json
Week09/V3/: README.md  api.http  db.json
Week09/hw9-v4/: README.md
week02-2/: package-lock.json
week03/: package-lock.json  package.json
week03-01/example1/: package-lock.json
week03/3a/: package-lock.json  package.json  tailwind.config.js
week03/3b/: package-lock.json
week03/example1/: package.json
week03/hw3-4/: README.md  package-lock.json  package.json
week05/: package-lock.json  package.json
week05/src/: App.js
week11/11b/: package-lock.json  package.json
(+116 files in other folders)
