[project]
name = "youtube_parser"
version = "0.1.0"
description = "Recipe Generator from Youtube Transcript"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "python-dotenv",
    "youtube-transcript-api>=0.6.1",
    "pydantic>=2.6.0",
    "mongoengine",
    "fastapi",
    "openai",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services/youtube-parser"]

[tool.uv]
resolution = "highest" 